Fixed a bug and changed title bar alignement

--- a/src/mainStyles.css
+++ b/src/mainStyles.css
@@ -18,8 +18,9 @@
 
 #documentName {
     text-align: center;
-    position: fixed;
+    position: absolute;
     left: 50%;
+    transform: translate(-50%, 0);
 }
 
 #titleAndLogo {
